--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .App {
+  margin: 0 auto;
   text-align: center;
-  font-family: 'Lato', sans-serif;
-  padding: 60px;
+  font-family: 'Quicksand', sans-serif;
+  /* padding: 60px; */
   background: #faf3f0;
   height: 100vh;
+  width: 100%;
 }
 
 /* @media  */
