--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -1,28 +1,25 @@
 .menu {
-  background-color: #e2e2e2;
-  padding: 12px;
-  border-radius: 6px;
+  background-color: #ffffff;
+  border-radius: 10px;
   display: flex;
-  flex-direction: column;
-  height: 200px;
+  justify-content: space-between;
+  flex-direction: row;
+  height: 70px;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
 }
 
 .menu a {
-  width: 80px;
-  height: 30px;
-  border-radius: 6px;
   text-align: center;
   text-decoration: none;
-  color: #121112;
-  padding: 6px;
-  margin-bottom: 6px;
+  padding: 10px;
+  /* margin-bottom: 6px; */
   line-height: 28px;
 }
 
-.menu a:hover {
-  background-color: #d0d0d0;
-}
-
-.activeLink {
-  background-color: #c3c3c3;
+.navItem {
+  width: 50px;
+  height: 50px;
+  color: blue;
 }
