--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background: #faf3f0;
+  border: 5px solid #ffffff;
+  border-radius: 10px;
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
