--- a/src/views/AuthPage.module.css
+++ b/src/views/AuthPage.module.css
@@ -1,18 +1,52 @@
 .container {
-  width: 10%;
-  height: 30%;
-  display: flex;
+  padding: 16px;
+  border-radius: 10px;
+  background: #ffffff;
+  width: 80%;
+  margin: 0 auto;
+  /* display: flex;
   flex-flow: wrap;
   justify-content: center;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); */
+}
+.authForm {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-.authForm {
+input[type='email'],
+input[type='password'] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  /* display: inline-block; */
+  border: none;
   background: #ffffff;
-  display: flex;
-  flex-flow: wrap;
-  justify-content: space-between;
+  border: 1px solid #c5c5c5;
+}
+
+.registerbtn {
+  background-color: #4caf50;
+  color: white;
+  font-size: 18px;
+  padding: 16px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+  border-radius: 10px;
+}
+
+a {
+  color: dodgerblue;
+}
+
+.signin {
+  text-align: center;
 }
