another logo tested

--- a/src/views/AuthPage.module.css
+++ b/src/views/AuthPage.module.css
@@ -31,7 +31,7 @@ input[type='password'] {
 }
 
 .registerbtn {
-  background-color: #4caf50;
+  background-color: #3f5097;
   color: white;
   font-size: 18px;
   padding: 16px 20px;
