closes #5 and closes #6

--- a/src/views/AuthPage.module.css
+++ b/src/views/AuthPage.module.css
@@ -4,6 +4,7 @@
   background: #ffffff;
   width: 80%;
   margin: 0 auto;
+  margin-top: 50px;
   /* display: flex;
   flex-flow: wrap;
   justify-content: center;
