--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,10 @@
 
 body {
   background: #faf3f0;
+  height: 100vh;
+  width: 100%;
   border: 5px solid #ffffff;
-  border-radius: 10px;
+
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
