--- a/src/components/TaskContainer.module.css
+++ b/src/components/TaskContainer.module.css
@@ -1,15 +1,20 @@
-.container {
+.mainContainer {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  border: solid 1px #ddd;
-  border-left: 20px solid yellow;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  background: #ffffff;
+  border-left: 20px solid #da596e;
   border-radius: 10px;
-  margin: 2px 0;
+  margin: 15px 30px;
   padding-left: 15px;
   padding-top: 10px;
   padding-bottom: 10px;
-  height: fit-content;
+}
+
+.textContainer {
+  display: flex;
+  width: 95%;
+  flex-direction: column;
 }
 
 .smallerText {
@@ -21,4 +26,17 @@
 .titleText {
   font-size: 15px;
   margin: 2px 0;
+  font-weight: bold;
+}
+
+.iconContainer {
+  width: 15%;
+  height: 100%;
+  margin-top: 15px;
+}
+
+.seeMoreIcon {
+  text-align: center;
+  height: 50%;
+  width: 50%;
 }
