--- a/src/components/AccountInfo.module.css
+++ b/src/components/AccountInfo.module.css
@@ -1,9 +1,11 @@
 .header {
   font-size: 1.4rem;
   padding: 10px;
+  text-align: center;
 }
 .subheader {
   font-size: 1.2rem;
+  text-align: center;
 }
 
 .form {
