--- a/src/components/Task.module.css
+++ b/src/components/Task.module.css
@@ -5,7 +5,7 @@
   background: #ffffff;
   border-left: 20px solid #da596e;
   border-radius: 10px;
-  margin: 15px 30px;
+  margin: 0 30px;
   padding-left: 15px;
   padding-top: 10px;
   padding-bottom: 10px;
