--- a/src/views/settings/components/TaskSettings.module.css
+++ b/src/views/settings/components/TaskSettings.module.css
@@ -1,27 +1,27 @@
 .header {
-  font-size: 1.4rem;
-  padding: 10px;
+  font-size: 1.1rem;
+  padding: 5px;
   text-align: center;
 }
 .subheader {
-  font-size: 1.3rem;
+  font-size: 1rem;
   text-align: center;
-  padding: 10px;
-  padding-bottom: 10px;
+  font-weight: lighter;
+  margin-top: 10px;
+  margin-bottom: 5px;
 }
 .settingsInput {
-  width: 100%;
+  width: 98%;
+  height: 24px;
   padding: 15px 25px;
-  font-size: 1.2rem;
-  margin: 10px 0 22px 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  border: none;
+  font-size: 1rem;
+  font-family: 'Quicksand', sans-serif;
   background: #ffffff;
   border: 1px solid #c5c5c5;
 }
 .settingsColorInput {
-  padding: 30px;
-  margin: 10px 0 22px 0;
+  padding: 15px 25px;
+  width: 98%;
 }
 .form {
   margin: 0 auto;
@@ -55,14 +55,4 @@ button {
 .buttonContainer {
   display: flex;
   justify-content: space-between;
-}
-.container {
-  padding: 16px;
-  padding-bottom: 30px;
-  border-radius: 10px;
-  background: #ffffff;
-  width: 100%;
-  margin: 0 auto;
-  margin-top: 14px;
-  margin-bottom: 40px;
 }
