--- a/src/views/tasks/NewTaskPage.module.css
+++ b/src/views/tasks/NewTaskPage.module.css
@@ -49,3 +49,15 @@ h1 {
   margin-bottom: 40px;
   border-radius: 10px;
 }
+.select {
+  width: 100%;
+  height: 40px;
+  font-size: 1rem;
+  margin-bottom: 25px;
+  background: #ffffff;
+  border: 1px solid #c5c5c5;
+}
+.option {
+  font-size: 1rem;
+  font-family: 'Quicksand', sans-serif;
+}
