add display tasks on calendar view

--- a/src/views/calendar/components/calendarBox.css
+++ b/src/views/calendar/components/calendarBox.css
@@ -102,7 +102,7 @@ button.rbc-input::-moz-focus-inner {
 }
 
 .rbc-today {
-  background-color: yellow;
+  background-color: #e07286;
 }
 
 .rbc-toolbar {
