--- a/src/views/settings/components/AccountInfo.module.css
+++ b/src/views/settings/components/AccountInfo.module.css
@@ -7,7 +7,6 @@
   font-size: 1rem;
   text-align: center;
   font-weight: lighter;
-  margin-top: 10px;
 }
 
 .settingsInput {
@@ -18,6 +17,7 @@
   font-family: 'Quicksand', sans-serif;
   background: #ffffff;
   border: 1px solid #c5c5c5;
+  margin: 1px;
 }
 
 .settingsButton {
