--- a/src/views/tasks/NewTaskPage.module.css
+++ b/src/views/tasks/NewTaskPage.module.css
@@ -1,20 +1,22 @@
 .container {
-  margin-top: 40px;
+  margin-top: 70px;
   border-radius: 10px;
   width: 80%;
   margin: 0 auto;
-  margin-bottom: 70px;
+  margin-bottom: 50px;
 }
 h1 {
   font-size: 1.1rem;
-  padding: 5px;
   text-align: center;
+  margin-bottom: 10px;
+  margin-top: 20px;
 }
 .subheader {
   font-size: 1rem;
   text-align: center;
   font-weight: lighter;
-  margin-top: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .buttonContainer {
@@ -49,15 +51,22 @@ h1 {
   margin-bottom: 40px;
   border-radius: 10px;
 }
+.input {
+  margin: 12px auto;
+  height: 40px;
+}
 .select {
   width: 100%;
   height: 40px;
-  font-size: 1rem;
-  margin-bottom: 25px;
+  font-size: 0.8rem;
+  color: gray;
+  padding-left: 10px;
+  margin: 12px auto;
   background: #ffffff;
   border: 1px solid #c5c5c5;
 }
 .option {
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-family: 'Quicksand', sans-serif;
+  width: 100%;
 }
