styles further polished

--- a/src/views/AuthGuard.js/components/Footer.module.css
+++ b/src/views/AuthGuard.js/components/Footer.module.css
@@ -3,7 +3,8 @@
   background: #3f5097;
   color: #ffffff;
   border-radius: 0 0 10px 10px;
-  margin-top: 8.2rem;
+  position: absolute;
+  bottom: 0;
   font-size: 12px;
 }
 
