--- a/src/views/settings/components/AccountInfo.module.css
+++ b/src/views/settings/components/AccountInfo.module.css
@@ -32,9 +32,6 @@
   margin: 8px 4px;
   border: none;
 }
-button:active {
-  background-color: #9daff7;
-}
 .buttonContainer {
   display: flex;
   justify-content: space-between;
@@ -50,3 +47,11 @@ button:active {
   margin-top: 15px;
   margin-bottom: 40px;
 } */
+
+.activeButton {
+  background: #e07286;
+  width: 100%;
+  padding: 12px;
+  font-size: 13px;
+  text-transform: uppercase;
+}
