--- a/src/views/settings/components/MainSettings.module.css
+++ b/src/views/settings/components/MainSettings.module.css
@@ -32,3 +32,10 @@
   display: flex;
   justify-content: space-between;
 }
+.activeButton {
+  background: #e07286;
+  width: 100%;
+  padding: 12px;
+  font-size: 13px;
+  text-transform: uppercase;
+}
